--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -1,13 +1,83 @@
 /* myStyle.css */
+body, html {
+    max-height: 100%;
+}
+
 body {
  background-color: white;
-}
-h1 {
- color: black;
+ max-width: 100%;
+ height: 1500px;
  text-align: center;
- font: italic 200% fantasy;
+ padding-left: 2%;
+ padding-right: 2%;
 }
-p { 
- color: #333300;
- text-align: center;
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #fefdfb;
+    width: 100%;
+    
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: white;
+}
+
+
+/* The hero image */
+.hero-image {
+    
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+    display:inline-block;
+    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0), rgba(255,255,255,0.25), 84%, rgba(255,255,25515) 98%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,0), rgba(255,255,255,0.25), 84%,rgba(255,255,255,1) 98%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0), rgba(255,255,255,0.25), 84%,rgba(255,255,255,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+}
+
+/* Place text in the middle/bottom of the image */
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+}
+
+.content{ 
+padding-left: 5%;
+padding-right: 5%;
+padding-bottom: 40%;
+}
+
+img {
+  position:relative;
+  z-index:-1;
+  display:block;
+  height:100%; 
+  width:100%;
+}
+
+footer{
+  background-color: #fefdfb;
 }
